--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,5 +30,11 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  redis:
+    image: redis:latest
+    container_name: redis_db
+    ports:
+      - "6379:6379"
+
 volumes:
   postgres_data:
