--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,12 @@ services:
     build:
       context: .
       dockerfile: api/Dockerfile
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: on-failure
     container_name: fast_api
     command: python api/app/main.py
     ports:
@@ -30,11 +36,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  redis:
-    image: redis:latest
-    container_name: redis_db
-    ports:
-      - "6379:6379"
+  
 
 volumes:
   postgres_data:
